--- a/sample/styles.css
+++ b/sample/styles.css
@@ -25,3 +25,8 @@ h1 {
   margin-top: 1.25em;
 }
 
+.table-striped tbody tr:nth-child(odd) td,
+.table-striped tbody tr:nth-child(odd) th {
+  background: #f5f5f5;
+}
+
